assets/styles/modules/navbar.scss
.searchicon {
  margin: 0 10px;

  a {
    background: url('../images/search_icon.svg') no-repeat center center;
    float: left;
    height: 20px;
    text-indent: -9999px;
    width: 20px;
  }

  p {
    margin: 0;
  }
}

.appsicon {
  margin: 0 10px;

  a {
    background: url('../images/applications-icon.svg');
    float: left;
    height: 30px;
    text-indent: -9999px;
    width: 30px;
  }

  p {
    margin: 0;
  }
}

.menu-fa-icon {
  margin: 0 5px;

  a {
    float: left;
    height: 30px;
    text-decoration: none;
    width: 30px;

    span {
      display: none;
    }
  }
}

// Navbar
#navbar-main {
  margin: 0;
  border: none;
  border-radius: 0;

  @media (max-width: #{$screen-tablet}) {
    padding-right: 0;
    padding-left: 0;
  }

  .container {
    padding: 0 15px;
  }

  .block-menu {
    margin-left: auto;
    margin-bottom: 3px;

    &:first-of-type:not(:only-of-type) {
      margin-top: 10px
    }

    li {
      padding: 0 11px;

      @media (min-width: #{$screen-desktop}) {
        padding: 0 4px;
      }

      @media (min-width: #{$screen-lg-desktop}) {
        padding: 0 8px;
      }

      a,
      span {
        padding: 0;

        @media (min-width: #{$screen-desktop}) {
          font-size: 15px;
        }

        @media (min-width: #{$screen-lg-desktop}) {
          font-size: 16px;
        }

        &:hover,
        &:focus {
          text-decoration: underline;
          background-color: transparent;
        }
      }
    }
  }
}

.nav-link:hover,
.nav-link:focus {
  text-decoration: underline;
}

// Dropdown toggle
.dropdown {
  .dropdown-toggle {
    &:after {
      background: url(../images/arrow-down-blue.svg) no-repeat center center;
      margin-left: 3px;
      width: 14px;
      height: 14px;
      vertical-align: middle;
      border: none;
    }
  }
  &.show {
    .dropdown-toggle:after {
      transform: rotate(180deg);
    }
  }
}

.dropdown.active > a {
  font-weight: 600;
}

.dropdown-menu {
  .dropdown-item:hover,
  .dropdown-item:focus,
  .dropdown-item.active {
    background-color: inherit;
  }

  .dropdown-item.active > a {
    font-weight: 600;
  }

  li.dropdown-item > a {
    display: block;
    padding: 2px 0 !important;
  }

  @media (max-width: #{$screen-desktop}) {
    border: none;
    padding-top: 0px;
  }
  @media (min-width: #{$screen-desktop}) {
    box-shadow: 0px 2px 20px rgba(0,0,0,0.25) !important;
  }

  padding: 20px 15px;
}

.dropdown-header {
  font-weight: 700;
}
// Logo
.navbar-brand {
  height: auto;
  margin-left: 0;
  margin-right: 0;
  padding: 0;

  img {
    height: auto;
    max-width: 110px;

    @media (min-width: #{$screen-desktop}) {
      max-width: 135px;
    }

    @media (min-width: #{$screen-lg-desktop}) {
      max-width: 153px;
    }
  }
}
// Navigation right
.region-navigation-right {
  align-items: center;
  flex-flow: row;

  @media (min-width: #{$screen-desktop}) {
    margin-left: 25px !important;
  }
}

.main-content {
  @media (max-width: #{$screen-desktop}) {
    border-top: 1px solid rgba(5, 45, 77, 0.13);
  }
}

#CollapsingNavbar {
  @media (min-width: #{$screen-desktop}) {
    margin-top: 3px;
  }

  @media (max-width: #{$screen-desktop}) {
    &.navbar-collapse nav.block-menu:not(:last-of-type) li.nav-item:last-of-type {
      border-bottom: 1px solid #{$cold-grey-01};
      padding-bottom: 10px !important;
    }
  }
  .nav > a.nav-link {
    padding-left: 11px;
  }
}

.navbar {
  padding: 0;
}

// External links in menu
#navbar-main {
  .dropdown {
    ul.dropdown-menu {
      li {
        a.ext-link {
          display: inline;
          background: url('../images/external-link_icon.svg') no-repeat right center;
          background-size: 12px;
          padding-right: 20px;
        }
      }
    }
  }
}

// Fix invisible toggler icon see barrio bugs
.navbar-toggler-icon {
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%285, 45, 77, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
}

.navbar-toggler {
  margin-left: auto;
  &.collapsed {
    transition: 250ms ease-in;
  }
  &:not(.collapsed) {
    background-color: #{$subtle-grey-01};
    transition: 250ms ease-in-out;
  }
}

